manifest/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studentapp-ingress
  labels:
    app: studentapp
spec:
  ingressClassName: nginx
  rules:
  - host: a1c026f98f203471c86f4148d8584e0d-10089715.eu-north-1.elb.amazonaws.com
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service: 
            name: studentapp-svc
            port: 
              number: 8080

      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: studentapp-frontend-svc
            port: 
              number: 80
